--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,2 @@
-# I do this project alone.
-
-Yonas Leykun <yonasleykun27@gmail.com>
+Fazal Haneef<fazalgit0@gmail.com>
+Abubakar Kadzo<husnabakar01@gmail.com>
