--- a/one/AUTHORS
+++ b/one/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Ehoneah Obed <ehoneahobed@hotmail.com>
-Anthony Ekim <otoobongekim@gmail.com>
+Fazal Haneef<fazalgit0@gmail.com>
+Abubakar Kadzo<husnabakar01@gmail.com>
